tests/baselines/reference/logicalNotExpression1.errors.txt
logicalNotExpression1.ts(1,2): error TS2304: Cannot find name 'foo'.


==== logicalNotExpression1.ts (1 errors) ====
    !foo;
     ~~~
!!! error TS2304: Cannot find name 'foo'.